--- a/package.json
+++ b/package.json
@@ -2,14 +2,9 @@
   "name": "laa_common_platform_ui",
   "private": true,
   "dependencies": {
-    "@babel/preset-react": "^7.7.4",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "govuk-frontend": "^3.4.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "govuk-frontend": "^3.4.0"
   },
   "version": "0.1.0",
   "devDependencies": {
