--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,6 +27,10 @@ Layout/LineLength:
   IgnoredPatterns: ['(\A|\s)#','.*\s+ # .*']
   AllowHeredoc: true
 
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/features/search_spec.rb'
+
 Rails/FilePath:
   Enabled: false
 
