--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,7 @@ AllCops:
   DisplayCopNames: true
   TargetRubyVersion: 2.7
   Exclude:
+    - tmp/**/*
     - bin/bundle
     - bin/rails
     - bin/rake
