--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -10,3 +10,14 @@ update_configs:
     # pull requests
     default_reviewers:
       - "jsugarman"
+
+  # Keep package.json (& lockfiles) up to date as soon as
+  # new versions are published to the npm registry
+  - package_manager: "javascript"
+    directory: "/"
+    update_schedule: "daily"
+
+    # Apply default reviewer and label to created
+    # pull requests
+    default_reviewers:
+      - "naseberry"
