remore development credentials
rely on default/global credentials
for development (and test). The
secret key base is currently the only
thing stored in `credentials.yml.enc`

--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,8 @@
 # /config/credentials/{environment}.key
 /config/master.key
 
-# IMPORTANT these keys must never be committed to repository
-/config/credentials/development.key
+# IMPORTANT environemtn specific keys must never be committed to repo
+/config/credentials/*.key
 
 /public/packs
 /public/packs-test
