Add dotenv gem and .env.development
For any development config that can be shared
safely. Currently only used for case worker
password.

--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,8 @@ yarn-debug.log*
 
 Brewfile.lock.json
 
-/config/credentials/development.key
+# dotenv (gem) ignores
+# check https://github.com/bkeepers/dotenv#what-other-env-files-can-i-use
+.env
+.env.local
+.env.**.local
