Ignore devise unused translations
They are called by the gem and therefore
i18n-tasks considers them unused even when
they may well be used.

--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -106,6 +106,16 @@ search:
 # - 'simple_form.{placeholders,hints,labels}.*'
 # - 'simple_form.{error_notification,required}.:'
 
+# ignore devise specific translations
+# as they are called by the gem not the app.
+ignore_unused:
+- devise.*
+- errors.messages.already_confirmed
+- errors.messages.confirmation_period_expired
+- errors.messages.expired
+- errors.messages.not_found
+- errors.messages.not_locked
+
 ## Exclude these keys from the `i18n-tasks eq-base' report:
 # ignore_eq_base:
 #   all:
