--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "laa_common_platform_ui",
+  "name": "laa_court_data_ui",
   "private": true,
   "dependencies": {
     "@rails/ujs": "^6.0.0",
