Add expected RAILS env vars to deployment
`RAILS_SERVE_STATIC_FILES` nowadays
just has to be present (value irrelevant)
in order to ensure serving of assets from
the `public/` dir.

RAILS_LOG_TO_STDOUT nowadays
just has to be present (value irrelevant)
to send logging to STDOUT. This can then
be intercepted by ELK.

--- a/.k8s/dev/deployment.yaml
+++ b/.k8s/dev/deployment.yaml
@@ -55,6 +55,10 @@ spec:
               value: 'production'
             - name: DOMAIN_URL
               value: 'https://dev.view-court-data.service.justice.gov.uk'
+            - name: RAILS_SERVE_STATIC_FILES
+              value: enabled
+            - name: RAILS_LOG_TO_STDOUT
+              value: enabled
             - name: SECRET_KEY_BASE
               valueFrom:
                 secretKeyRef:
