Add authorization request specs and handle unauthorized alerts

--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -115,6 +115,7 @@ ignore_unused:
 - errors.messages.expired
 - errors.messages.not_found
 - errors.messages.not_locked
+- unauthorized.*
 
 ## Exclude these keys from the `i18n-tasks eq-base' report:
 # ignore_eq_base:
