Remove `RSpec/AnyInstance` cop
Find alternative?!

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -44,6 +44,9 @@ Metrics/MethodLength:
 Rails/FilePath:
   Enabled: false
 
+RSpec/AnyInstance:
+  Enabled: false
+
 # => RSpec
 RSpec/ExampleLength:
   Exclude:
