Add Govuk Notify
Add initializer

Fix rubocop

Add notifiy_devise_mailer_spec

Fix rubocop

Add unlock instructions

Refactor

Refactor specs

Add email_changed

Fix rubocop

Attempt to fix Page not found errors

Another attempt to fix page not found errors

Fix circleci fail?

Amend production config

Add GOVUK_NOTIFY_API_KEY to deployment file

Extract template ids to constants

Change devise mailer structure

User email_before_last_save instead of last_email

Remove password_helpers and use default devise function

--- a/.k8s/dev/deployment.yaml
+++ b/.k8s/dev/deployment.yaml
@@ -83,3 +83,8 @@ spec:
                 secretKeyRef:
                   name: lcdui-secrets
                   key: CASEWORKER_PASSWORD
+            - name: GOVUK_NOTIFY_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-secrets
+                  key: GOVUK_NOTIFY_API_KEY
