Add dummy authentication tokens
For dummy authentication against
mock api calls.

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 CASEWORKER_PASSWORD: 'caseworker-password'
 MANAGER_PASSWORD: 'manager-password'
+COURT_DATA_ADAPTOR_BEARER_TOKEN: 'not-a-real-bearer-token'
