--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "laa_court_data_ui",
   "private": true,
+  "version": "1.21.1",
+  "scripts": {
+    "lint-js": "standard"
+  },
   "dependencies": {
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "govuk-frontend": "^3.5.0"
   },
-  "version": "1.21.1",
   "devDependencies": {
+    "standard": "^14.3.1",
     "webpack-dev-server": "^3.10.2"
   }
 }
