--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "version": "1.21.1",
   "scripts": {
-    "lint-js": "standard"
+    "lint-js": "standard",
+    "lint-sass": "sass-lint -v"
   },
   "dependencies": {
     "@rails/ujs": "^6.0.0",
@@ -11,6 +12,7 @@
     "govuk-frontend": "^3.5.0"
   },
   "devDependencies": {
+    "sass-lint": "^1.13.1",
     "standard": "^14.3.1",
     "webpack-dev-server": "^3.10.2"
   }
