--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -116,6 +116,7 @@ ignore_unused:
 - errors.messages.not_found
 - errors.messages.not_locked
 - unauthorized.*
+- date.formats.*
 
 ## Exclude these keys from the `i18n-tasks eq-base' report:
 # ignore_eq_base:
