--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -117,6 +117,7 @@ ignore_unused:
 - errors.messages.not_locked
 - unauthorized.*
 - date.formats.*
+- activemodel.errors.models.*
 
 ## Exclude these keys from the `i18n-tasks eq-base' report:
 # ignore_eq_base:
