Amend adaptor api url inline with [commit](https://github.com/ministryofjustice/laa-court-data-adaptor/commit/07e751cc694bc83d9b3ac0c77e43173e516a44fc)

--- a/.k8s/dev/deployment.yaml
+++ b/.k8s/dev/deployment.yaml
@@ -56,7 +56,7 @@ spec:
             - name: DOMAIN_URL
               value: 'https://dev.view-court-data.service.justice.gov.uk'
             - name: COURT_DATA_ADAPTOR_API_URL
-              value: https://laa-court-data-adaptor-dev.apps.live-1.cloud-platform.service.justice.gov.uk/api
+              value: https://laa-court-data-adaptor-dev.apps.live-1.cloud-platform.service.justice.gov.uk/api/internal/v1
             - name: RAILS_SERVE_STATIC_FILES
               value: enabled
             - name: RAILS_LOG_TO_STDOUT
