rename command and add to build-base

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,6 +102,7 @@ commands:
     steps:
       - install-gems
       - install-compile-assets
+      - install-codeclimate-tt
 
   db-setup:
     steps:
@@ -164,10 +165,10 @@ commands:
           command: |
             tmp/cc-test-reporter sum-coverage --output - --parts 1 tmp/coverage/codeclimate.*.json | tmp/cc-test-reporter upload-coverage --input -
 
-  load-code-climate:
+  install-codeclimate-tt:
     steps:
       - run:
-          name: Load and persist code climate
+          name: Install codeclimate test reporter
           command: |
             mkdir -p tmp/
             mkdir -p tmp/coverage/
@@ -204,7 +205,6 @@ jobs:
     executor: test-executor
     steps:
       - checkout
-      - load-code-climate
       - build-base
 
   linter-tests:
