Add oauth2 client for connection to adaptor
Enable connection to adaptor via oauth2 beacuse
adaptor has implemented OAuth2 and current master
unable to query it.

- add configurable oauth options
- add client
- add secrets
- basic handling of unauthorised access
- record oauth2 for testing

--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,7 @@
-COURT_DATA_ADAPTOR_API_URL: https://laa-court-data-adaptor-dev.apps.live-1.cloud-platform.service.justice.gov.uk/api
-# COURT_DATA_ADAPTOR_API_URL: http://localhost:9292
-COURT_DATA_ADAPTOR_BEARER_TOKEN: 'not-a-real-bearer-token'
+oud-platform.service.justice.gov.uk/api/internal/v1
+COURT_DATA_ADAPTOR_API_URL: https://test-court-data-adaptor/api/internal/v1
+COURT_DATA_ADAPTOR_API_UID: test-app-id
+COURT_DATA_ADAPTOR_API_SECRET: test-app-secret
 GA_TRACKING_ID: UA-XXXXXXXXX-XX
+
+TEST_COURT_DATA_ADAPTOR_API_BEARER_TOKEN: test-bearer-token
