[CACP-182] Add Google analytics

--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ MANAGER_PASSWORD: manager-password
 COURT_DATA_ADAPTOR_API_URL: https://laa-court-data-adaptor-dev.apps.live-1.cloud-platform.service.justice.gov.uk/api/internal/v1
 # COURT_DATA_ADAPTOR_API_URL: http://localhost:9292
 COURT_DATA_ADAPTOR_BEARER_TOKEN: not-a-real-bearer-token
+GA_TRACKING_ID: UA-XXXXXXXXX-XX
