--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,4 @@
 COURT_DATA_ADAPTOR_API_URL: https://laa-court-data-adaptor-dev.apps.live-1.cloud-platform.service.justice.gov.uk/api
 # COURT_DATA_ADAPTOR_API_URL: http://localhost:9292
 COURT_DATA_ADAPTOR_BEARER_TOKEN: 'not-a-real-bearer-token'
+GA_TRACKING_ID: UA-XXXXXXXXX-XX
