--- a/.k8s/dev/deployment.yaml
+++ b/.k8s/dev/deployment.yaml
@@ -59,6 +59,8 @@ spec:
               value: https://laa-court-data-adaptor-dev.apps.live-1.cloud-platform.service.justice.gov.uk/api/internal/v1
             - name: RAILS_SERVE_STATIC_FILES
               value: enabled
+            - name: GA_TRACKING_ID
+              value: 'UA-131160087-14'
             - name: RAILS_LOG_TO_STDOUT
               value: enabled
             - name: SECRET_KEY_BASE
