Prevent rubocop warning
rubocop 0.80.0 introduced new cops
with, apparently, no-default:

```
The following cops were added to RuboCop, but are not configured. Please set Enabled to either `true` or `false` in your `.rubocop.yml` file:
 - Style/HashEachMethods
 - Style/HashTransformKeys
 - Style/HashTransformValues
 ```

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -68,10 +68,18 @@ RSpec/NestedGroups:
 Style/Documentation:
   Enabled: false
 
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
+
 Style/ClassAndModuleChildren:
   Exclude:
     - app/controllers/users/*controller.rb
 
 Style/RegexpLiteral:
   EnforcedStyle: slashes
-
