Fix existing tests against oauth, new schema and VCR stubs

--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,6 @@
-oud-platform.service.justice.gov.uk/api/internal/v1
-COURT_DATA_ADAPTOR_API_URL: https://test-court-data-adaptor/api/internal/v1
+COURT_DATA_ADAPTOR_API_URL: http://localhost:9292/api/internal/v1
 COURT_DATA_ADAPTOR_API_UID: test-app-id
 COURT_DATA_ADAPTOR_API_SECRET: test-app-secret
-GA_TRACKING_ID: UA-XXXXXXXXX-XX
+COURT_DATA_ADAPTOR_API_TEST_MODE: true
 
-TEST_COURT_DATA_ADAPTOR_API_BEARER_TOKEN: test-bearer-token
+GA_TRACKING_ID: UA-XXXXXXXXX-XX
