--- a/.k8s/prod/deployment.yaml
+++ b/.k8s/prod/deployment.yaml
@@ -2,9 +2,9 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: laa-court-data-ui
-  namespace: laa-court-data-ui-prod
+  namespace: laa-court-data-ui-production
 spec:
-  replicas: 2
+  replicas: 4
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -48,13 +48,13 @@ spec:
             periodSeconds: 10
           env:
             - name: ENV
-              value: 'prod'
+              value: 'production'
             - name: RACK_ENV
               value: 'production'
             - name: RAILS_ENV
               value: 'production'
             - name: DOMAIN_URL
-              value: 'https://prod.view-court-data.service.justice.gov.uk'
+              value: 'https://view-court-data.service.justice.gov.uk'
             - name: COURT_DATA_ADAPTOR_API_URL
               value: https://laa-court-data-adaptor-prod.apps.live-1.cloud-platform.service.justice.gov.uk/api/internal/v1
             - name: RAILS_SERVE_STATIC_FILES
