--- a/.k8s/prod/service.yaml
+++ b/.k8s/prod/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: laa-court-data-ui-app-service
-  namespace: laa-court-data-ui-prod
+  namespace: laa-court-data-ui-production
   labels:
     app: laa-court-data-ui-app-service
 spec:
