Add fundamental admin role capabilities and lockdown sidekiq console
The admin roles authorization needed defining
and, in particular, being given exclusieve access
to the background processing tool's dashboard (the
sidekiq console).

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -34,6 +34,10 @@ Layout/LineLength:
   IgnoredPatterns: ['(\A|\s)#','.*\s+ # .*', "body: '{\".*\":"]
   AllowHeredoc: true
 
+Metrics/AbcSize:
+  Exclude:
+    - app/models/ability.rb
+
 Metrics/BlockLength:
   Exclude:
     - spec/**/*.rb
