--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,6 @@
 CASEWORKER_PASSWORD: caseworker-password
 MANAGER_PASSWORD: manager-password
+ADMIN_PASSWORD: admin-password
 COURT_DATA_ADAPTOR_API_URL: https://laa-court-data-adaptor-dev.apps.live-1.cloud-platform.service.justice.gov.uk/api/internal/v1
 # COURT_DATA_ADAPTOR_API_URL: http://localhost:9292/api/internal/v1
 GA_TRACKING_ID: UA-XXXXXXXXX-XX
