Add feature test for unlinked page flow

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,6 +37,7 @@ Layout/LineLength:
 Metrics/AbcSize:
   Exclude:
     - app/models/ability.rb
+    - spec/features/**/*.rb
 
 Metrics/BlockLength:
   Exclude:
