Add custom breadcrumb builder
To apply [gds design system breadcrumb styles](
https://design-system.service.gov.uk/components/breadcrumbs)

NOTE: Can't get a test template to output the
actual tag content - `undefined method 'content_tag'
for <Testclass>`

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -51,6 +51,10 @@ Metrics/MethodLength:
 Rails/FilePath:
   Enabled: false
 
+Rails/OutputSafety:
+  Exclude:
+    - lib/gds_design_system_breadcrumb_builder.rb
+
 RSpec/AnyInstance:
   Enabled: false
 
