--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "sass-lint": "^1.13.1",
     "standard": "^14.3.3",
     "webpack-dev-server": "^3.10.3"
+  },
+  "resolutions": {
+    "minimist": "^1.2.2"
   }
 }
