--- a/spec/fixtures/vcr_cassettes/spec/features/search/case_reference_spec.yml
+++ b/spec/fixtures/vcr_cassettes/spec/features/search/case_reference_spec.yml
@@ -102,4 +102,55 @@ http_interactions:
       string: '{"data":null}'
     http_version: null
   recorded_at: Tue, 10 Mar 2020 17:41:15 GMT
+- request:
+    method: get
+    uri: http://localhost:9292/api/internal/v1/prosecution_cases?filter%5Bprosecution_case_reference%5D=NONEXISTENTCASEURN&include=defendants
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.17.3
+      Content-Type:
+      - application/vnd.api+json
+      Accept:
+      - application/vnd.api+json
+      Authorization:
+      - Bearer PDwcSII2YJz_01puZ-vPX7gYsytOOYKSREG-6R0Xo0c
+      Accept-Encoding:
+      - gzip,deflate
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      X-Frame-Options:
+      - SAMEORIGIN
+      X-Xss-Protection:
+      - 1; mode=block
+      X-Content-Type-Options:
+      - nosniff
+      X-Download-Options:
+      - noopen
+      X-Permitted-Cross-Domain-Policies:
+      - none
+      Referrer-Policy:
+      - strict-origin-when-cross-origin
+      Content-Type:
+      - application/vnd.api+json; charset=utf-8
+      Etag:
+      - W/"ba5f3ea40e95f49bce11942f375ebd38"
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      X-Request-Id:
+      - ddcbe71c-e56f-476b-9f49-04a3910f6f8e
+      X-Runtime:
+      - '0.096573'
+      Content-Length:
+      - '13'
+    body:
+      encoding: UTF-8
+      string: '{"data":null}'
+    http_version: null
+  recorded_at: Tue, 17 Mar 2020 11:21:34 GMT
 recorded_with: VCR 5.1.0
