--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,6 +130,12 @@ commands:
           name: Run Sass-lint
           command: yarn run lint-sass
 
+  jest:
+    steps:
+      - run:
+          name: Run Jest
+          command: yarn test
+
   brakeman:
     steps:
       - run:
@@ -217,6 +223,14 @@ jobs:
       - rubocop
       - brakeman
 
+  jest-tests:
+    executor: test-executor
+    parallelism: 1
+    steps:
+      - checkout
+      - build-base
+      - jest
+
   rspec-tests:
     executor: test-executor
     parallelism: 1
@@ -273,12 +287,16 @@ workflows:
       - linter-tests:
           requires:
             - build-test-container
+      - jest-tests:
+          requires:
+            - build-test-container
       - rspec-tests:
           requires:
             - build-test-container
       - build-app-container:
           requires:
             - linter-tests
+            - jest-tests
             - rspec-tests
       - deploy-dev:
           requires:
@@ -308,6 +326,9 @@ workflows:
       - linter-tests:
           requires:
             - build-test-container
+      - jest-tests:
+          requires:
+            - build-test-container
       - rspec-tests:
           requires:
             - build-test-container
@@ -315,6 +336,7 @@ workflows:
           type: approval
           requires:
             - linter-tests
+            - jest-tests
             - rspec-tests
           filters:
             branches:
