Add mechanism to ignore ruby 2.7 deprecation warnings
These are irritating and the per-command
method is tedious. The `.env` file means
we can just `source .env`.

--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ Brewfile.lock.json
 
 # dotenv (gem) ignores
 # check https://github.com/bkeepers/dotenv#what-other-env-files-can-i-use
-.env
+# .env
 .env.local
 .env.**.local
 
