--- a/.k8s/staging/deployment.yaml
+++ b/.k8s/staging/deployment.yaml
@@ -108,3 +108,8 @@ spec:
                 secretKeyRef:
                   name: lcdui-secrets
                   key: GOVUK_NOTIFY_API_KEY
+            - name: SENTRY_DSN
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-secrets
+                  key: SENTRY_DSN
