development config tweaks

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 # DO NOT PUT SECRETS HERE
+# use with `source .env` in terminal to
+# prevent ruby 2.7 deprecation warnings.
+#
 export RUBYOPT='-W:no-deprecated'
