Implement linked and just linked defendant flow
- separate view compenents into partials
- add feature test for linking (and replace cassette with stubs)

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -31,7 +31,7 @@ Layout/EmptyLineAfterGuardClause:
 
 Layout/LineLength:
   Max: 110
-  IgnoredPatterns: ['(\A|\s)#','.*\s+ # .*', "body: '{\".*\":"]
+  IgnoredPatterns: ['(\A|\s)#','.*\s+ # .*', "body: '{\".*\":", "%r{http.*"]
   AllowHeredoc: true
 
 Metrics/AbcSize:
